--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -16,6 +16,8 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+# enable clipboard
+set-option -g -s set-clipboard on
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
@@ -40,10 +42,13 @@ set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
+# Yank config
+set -g @yank_action 'copy-pipe'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
+# requires: brew install reattach-to-user-namespace
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # set vi-mode
@@ -51,7 +56,6 @@ set-window-option -g mode-keys vi
 # keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 bind s split-window -v -c "#{pane_current_path}"
 bind v split-window -h -c "#{pane_current_path}"
