--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -35,8 +35,7 @@ bind -n M-L next-window
 # set -g default-command "~/.cargo/bin/nu -l"
 
 # Catpuccin config
-set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_window_status_icon_enable "yes"
+set -g @catppuccin_window_status "icon"
 set -g @catppuccin_icon_window_zoom " 󰁌"
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
