--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -33,6 +33,7 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 # set -g default-command "~/.cargo/bin/nu -l"
+set-option -g default-shell "/opt/homebrew/bin/fish"
 
 # Catpuccin config
 set -g @catppuccin_window_status "icon"
