--- a/areospace/.config/aerospace/aerospace.toml
+++ b/areospace/.config/aerospace/aerospace.toml
@@ -202,3 +202,11 @@ run = "move-node-to-workspace B"
 [[on-window-detected]]
 if.app-id = 'dev.zed.Zed'
 run = "move-node-to-workspace Z"
+
+[[on-window-detected]]
+if.app-id = "com.mitchellh.ghostty"
+run = ["layout floating"]
+
+[[on-window-detected]]
+if.app-id = "com.mitchellh.ghostty"
+run = "move-node-to-workspace T"
