--- a/opencode/.config/opencode/config.json
+++ b/opencode/.config/opencode/config.json
@@ -6,9 +6,22 @@
       "npm": "@openrouter/ai-sdk-provider",
       "name": "OpenRouter",
       "options": {},
+
       "models": {
-        "anthropic/claude-4-sonnet-20250522": {
+        "anthropic/claude-sonnet-4": {
           "name": "Claude Sonnet 4"
+        },
+        "anthropic/claude-opus-4": {
+          "name": "Claude Opus 4"
+        },
+        "deepseek/deepseek-chat-v3-0324": {
+          "name": "Deepseek v3 free"
+        },
+        "google/gemini-2.5-pro": {
+          "name": "Gemini 2.5 pro"
+        },
+        "openai/o4-mini-high": {
+          "name": "O4 mini"
         }
       }
     }
