--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 nvim/.config/nvim/lazy-lock.json
 nvim/.config/nvim/time.txt
 fish/.config/fish/fish_variables
+fish/.config/fish/conf.d/fisher.fish
+fish/.config/fish/completions/fisher.fish
+fish/.config/fish/functions/fisher.fish
+fish/.config/fish/functions/_nvm*
+fish/.config/fish/conf.d/nvm.fish
+fish/.config/fish/functions/nvm.fish
+fish/.config/fish/completions/nvm.fish
 nushell/.config/nushell/history.txt
 tmux/.config/tmux/plugins
 bin/.local/bin/codelldb
