--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -43,7 +43,8 @@
 # resize-overlay-duration = 4s 200ms
 
 # To show config: ghostty +show-config | grep keybind | fzf
-theme = catppuccin-frappe
+command = /opt/homebrew/bin/fish --login --interactive
+
 
 # Tmux like navigation
 keybind = ctrl+a>n=new_window
