--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-nvim/.config/nvim/lazy-lock.json
-nvim/.config/nvim/time.txt
+lazy-nvim/.config/nvim/lua/plugins/theme.lua
 fish/.config/fish/fish_variables
 fish/.config/fish/conf.d/fisher.fish
 fish/.config/fish/completions/fisher.fish
