--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -11,11 +11,14 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+set -g status-style 'bg=#333333 fg=#5eacd3'
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+
 # enable clipboard
 set-option -g -s set-clipboard on
 
@@ -32,22 +35,12 @@ bind -n S-Right next-window
 # Shift Alt vim keys to switch windows
 bind -n M-H previous-window
 bind -n M-L next-window
-# set -g default-command "~/.cargo/bin/nu -l"
-set-option -g default-shell "/bin/zsh"
 
-# Catpuccin config
-set -g @catppuccin_window_status "icon"
-set -g @catppuccin_icon_window_zoom " 󰁌"
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
 # Yank config
 set -g @yank_action 'copy-pipe'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
 # requires: brew install reattach-to-user-namespace
 set -g @plugin 'tmux-plugins/tmux-yank'
 
@@ -64,3 +57,6 @@ bind v split-window -h -c "#{pane_current_path}"
 # git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm
 # cd ~/.config/tmux/plugins && ./tpm/scripts/install_plugins.sh
 run '~/.config/tmux/plugins/tpm/tpm'
+
+set -gu default-command
+set -g default-shell "$SHELL"
