--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -41,7 +41,7 @@ set -g @yank_action 'copy-pipe'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# requires: brew install reattach-to-user-namespace
+# requires in mac: brew install reattach-to-user-namespace
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # set vi-mode
@@ -59,4 +59,5 @@ bind v split-window -h -c "#{pane_current_path}"
 run '~/.config/tmux/plugins/tpm/tpm'
 
 set -gu default-command
-set -g default-shell "$SHELL"
+# set -g default-shell "$SHELL"
+set -g default-shell "(which fish)"
