--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -58,6 +58,6 @@ bind v split-window -h -c "#{pane_current_path}"
 # cd ~/.config/tmux/plugins && ./tpm/scripts/install_plugins.sh
 run '~/.config/tmux/plugins/tpm/tpm'
 
-set -gu default-command
+# set -gu default-command
 # set -g default-shell "$SHELL"
-set -g default-shell "(which fish)"
+set -g default-command "fish"
