--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -9,7 +9,7 @@ TERM = "xterm-256color"
 draw_bold_text_with_bright_colors = false
 
 [font]
-size = 14.0
+size = 13.0
 
 [font.bold]
 family = "JetBrainsMono Nerd Font"
@@ -28,4 +28,4 @@ family = "JetBrainsMono Nerd Font"
 style = "Regular"
 
 [terminal]
-shell = { program = "/opt/homebrew/bin/fish", args = ["--login", "--interactive"] }
+shell = { program = "/usr/bin/env", args = ["fish", "--login", "--interactive"] }
